# light-chaser

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  README_ZH.md  config-overrides.js  demo.md  index.html  index.md  nginx.conf  package.json  plan.md  pnpm-lock.yaml  postcss.config.js  tsconfig.json  tsconfig.node.json  vercel.json  vite.base.config.ts  vite.config.ts  vite.dev.config.ts  vite.prod.config.ts
backend/: Dockerfile  README.md  README_zh.md  docker-compose.yml  pom.xml
config/: webpack.config.js  webpackDevServer.config.js
doc/: LC设计器大纲.xmind  LIGHT CHASER设计梳理.xmind  LIGHT-CHASER-STORE.xmind  lc store设计.xmind  record.md
docs/: GIT规范.md  开发规范.md  部署运维说明.md
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.base.config.ts  vite.config.ts  vite.dev.config.ts
prompt/: 项目优化提示词.md
public/: index.html  manifest.json
scripts/: build.js  deploy-same-origin.js
site/: asset-manifest.json
src/: App.less  App.tsx  MainRouter.tsx  demo.html  global.d.ts  index.less  index.tsx  observerManager.ts  react-app-env.d.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/sqls/: V2024.5.8.1__baseline.sql
src-tauri/src/: backend.rs  main.rs
src-tauri/src/backend/: crypto.rs  db.rs  mod.rs  models.rs  response.rs  server.rs  state.rs  util.rs
src-tauri/src/backend/handlers/: common_db.rs  crypto.rs  db_executor.rs  health.rs  image.rs  mod.rs  project.rs
(+2089 files in other folders)
