[package]
name = "light-chaser"
version = "1.7.0"
description = "Light Chaser"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes = "0.8"
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
base64 = "0.22"
cbc = "0.1"
cipher = "0.4"
rand = "0.8"
rsa = { version = "0.9", features = ["pem", "sha2"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4"] }
